# virtual-display-rs

./: .gitignore  Check-DriverEvents.ps1  Check-IddCxVersion.ps1  Check-TraceLog.ps1  Check-VDD.ps1  Check-VDDLogs.ps1  Clear-TraceLog.ps1  Deploy-VDD.ps1  Test-ActivateDisplay.ps1  Test-Canary.ps1  Test-CleanPathActivation.ps1  Test-DiagnoseIddCx.ps1  Test-DisplayBurst.ps1  Test-DisplayConfigUpdate.ps1  Test-DisplayState.ps1  Test-ExplicitPathActivation.ps1  Test-ExtendDesktop.ps1  Test-ExtendFromUser.ps1  Test-ExtendThenAdd.ps1  Test-ForceExtend.ps1  Test-IddCx0104.ps1  Test-IddCxServices.ps1  Test-IddCxVersion.ps1  Test-InitCheck.ps1  Test-Ping.ps1  Test-Recording.ps1  Test-Recording2.ps1  Test-Recording3.ps1  Test-SessionCheck.ps1  Test-SessionState.ps1  Test-UserSessionExtend.ps1  Test-VerifyLoadedDriver.ps1  Test-WakeAndActivate.ps1  Test-WakeAndActivate2.ps1  Test-WakeAndActivate3.ps1  Test-WakeViaHelper.ps1  Upgrade-IddCxVersion.ps1  Verify-VDD.ps1
.claude/: settings.local.json
docs/plans/: 2026-02-27-integrated-mp4-recording-design.md  2026-02-27-integrated-mp4-recording-plan.md
rust/: Cargo.toml
rust/driver-ipc/: Cargo.toml
rust/driver-ipc/src/: client.rs  core.rs  driver_client.rs  mock.rs
rust/driver-logger/: Cargo.toml
rust/dxgi-capture/: Cargo.toml
rust/dxgi-capture/src/: capture.rs  control.rs  display.rs  main.rs  service.rs  shared_memory.rs
rust/virtual-display-driver/: Cargo.toml
rust/virtual-display-driver/src/: callbacks.rs  context.rs  direct_3d_device.rs  ipc.rs  (+6 more)
rust/wdf-umdf/: Cargo.toml
rust/wdf-umdf-sys/: Cargo.toml  build.rs
(+1 files in other folders)
